<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="glide_name">Image Loading Library by BumpTech</string>
    <string name="glide_description">Image Loading Library by BumpTech</string>
    <string name="retrofit_name">Retrofit</string>
    <string name="retrofit_description">Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="action_settings">Settings</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_channel_id" translatable="false">load_app_channel</string>
    <string name="notification_channel_name" translatable="false">load_app</string>
    <string name="notification_button">See changes</string>
    <string name="button_download">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="logo">Logo</string>
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="udacity">LoadApp - Current repository by Udacity</string>
    <string name="Retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="toast">please select the file to download</string>
    <string name="check">Check the status</string>
    <string name="file_name">File name</string>
    <string name="status">Status</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>


</resources>